--- a/exam-template/all.html
+++ b/exam-template/all.html
@@ -40,7 +40,7 @@
                                     <h5 class="card-title">{{element.name}}</h5>
                                     <p class="card-text">{{element.description}}</p>
 
-                                    <a href="#" class="btn btn-primary" @click='showPage(index)'>Читать</a>
+                                    <a href="#" class="btn btn-primary" @click="showArticle(index)">Читать</a>
                                 </div>
                             </div>
                         </div>
@@ -48,7 +48,7 @@
                 </section>
             </div>
         </div>
-        <div class="create" v-if='page === "create"'>
+        <div class="create" v-if='page === "edit"'>
             <header class="bg-primary text-white py-2">
                 <div class="container d-flex justify-content-between">
                     <a href="#" class="navbar-brand text-white" @click='page = "index"'>Статейка</a>
@@ -71,17 +71,17 @@
 
                         <div class="mb-3">
                             <label>Название</label>
-                            <input type="text" class="form-control" placeholder="Придумайте название статьи">
+                            <input type="text" class="form-control" placeholder="Придумайте название статьи"  v-model:='editPost.name' :value='editPost.name'>
                         </div>
                         <div class="mb-3">
                             <label>Описание</label>
-                            <textarea class="form-control" placeholder="Напишите описание статьи" rows="5"></textarea>
+                            <textarea class="form-control" placeholder="Напишите описание статьи" rows="5"  v-model:='editPost.description' :value='editPost.description'></textarea>
                         </div>
                         <div class="mb-4">
                             <label>Изображение</label>
-                            <input type="file" class="form-control">
+                            <input type="file" class="form-control"  @chage='addimage'>
 
-                            <img src="assets/images/placeholder-blue.png" class="w-100 mt-4" alt="preview">
+                            <img :src="editPost.image" class="w-100 mt-4" alt="preview">
                         </div>
 
                         <button class="btn btn-success">Добавить статью</button>
@@ -89,7 +89,7 @@
                 </section>
             </div>
         </div>
-        <div class="edit" v-if='page === "edit"'>
+        <div class="edit" v-if='page === "create"'>
             <header class="bg-primary text-white py-2">
                 <div class="container d-flex justify-content-between">
                     <a href="#" class="navbar-brand text-white" @click='page = "index"'>Статейка</a>
@@ -120,12 +120,12 @@
                         </div>
                         <div class="mb-4">
                             <label>Изображение</label>
-                            <input type="file" class="form-control">
+                            <input type="file" class="form-control" @change='addimage'>
 
-                            <img src="assets/images/placeholder-blue.png" class="w-100 mt-4" alt="preview">
+                            <img :src="post.image" class="w-100 mt-4" :alt="post.name">
                         </div>
 
-                        <button class="btn btn-success" @click.prevent="addPost">Сохранить</button>
+                        <button class="btn btn-success" @click='addArticle'>Сохранить</button>
                     </form>
                 </section>
             </div>
@@ -140,7 +140,7 @@
                         <a href="#" class="nav-link text-white" @click='page = "all"'>Все статьи</a>
                         <a href="#" class="nav-link text-white" @click='page = "manage"'>Управление статьями</a>
                     </nav>
-                </div>
+                </div> 
             </header>
 
             <div class="container">
@@ -162,7 +162,7 @@
                                     <h5 class="card-title">{{element.name}}</h5>
                                     <p class="card-text">{{element.description}}</p>
 
-                                    <a href="#" class="btn btn-primary" @click='showPage(index)'>Читать</a>
+                                    <a href="#" class="btn btn-primary" @click="showArticle(index)">Читать</a>
                                 </div>
                             </div>
                         </div>
@@ -174,7 +174,7 @@
                         <h2>Случайная статья</h2>
                     </div>
                     <a href="#" class="card bg-dark text-white">
-                        <img class="card-img" :src="randomArticle.image" alt="placeholder">
+                        <img class="card-img" :src="randomArticle.image" :alt="randomArticle.name">
                         <div class="card-img-overlay">
                             <h5 class="card-title">{{randomArticle.name}}</h5>
                         </div>
@@ -199,7 +199,7 @@
                 <section class="py-5">
                     <div class="mb-4 d-flex justify-content-between align-items-center">
                         <h2>Управление статьями</h2>
-                        <button class="btn btn-sm btn-success" @click="page= 'edit'">Добавить статью</button>
+                        <button class="btn btn-sm btn-success" @click="page = 'create'">Добавить статью</button>
                     </div>
 
                     <table class="table">
@@ -214,8 +214,8 @@
                             <td>{{element.name}}</td>
                             <td>{{element.data}}</td>
                             <td>
-                                <button class="btn btn-primary btn-sm">Редактировать</button>
-                                <button class="btn btn-danger btn-sm" @click='removeManage(index)'>Удалить</button>
+                                <button class="btn btn-primary btn-sm" @click="editArticle(index)" >Редактировать</button>
+                                <button class="btn btn-danger btn-sm" @click='removeArticle(index)'>Удалить</button>
                             </td>
                         </tr>
                     </table>
@@ -232,7 +232,6 @@
                     </nav>
                 </div>
             </header>
-
             <div class="container">
                 <section class="py-5">
                     <h2 class="mb-4">{{showPageIndex.name}}</h2>
